--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./calcLength.css" />
-    <title>Document</title>
+    <title>One Web</title>
   </head>
   <body>
     <div class="app">
